--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-pay-button": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "1.1.5",
     "styled-components": "^4.4.1"
